--- a/sass/site/blog/blog-layouts/_archive-skin-1.scss
+++ b/sass/site/blog/blog-layouts/_archive-skin-1.scss
@@ -40,14 +40,6 @@
 	}
 }
 
-@media (max-width: $mx-col-md) {
-	.ast-author-box{
-		img.avatar {
-		    margin: 20px 0 0 0;
-		}
-	}
-}
-
 .ast-separate-container {
 	.ast-author-box,
 	.ast-archive-description {
